Revision history for {{$dist->name}}

{{$NEXT}}

0.09      2014-08-16 23:14:24Z
    - generated test file now defaults to xt/author/no-tabs.t, but is
      configurable

0.08      2014-05-04 21:24:28Z
    - deprecate the needless separated finder options, replaced by a single
      'finder' option.

0.07      2014-04-16 03:45:17Z
    - line numbers in shipped code are now almost the same (within 3) as
      the repository source, for easier debugging
    - formally deprecated [NoTabsTests] (it will continue to exist through
      October 2014).
    - now once again scanning t/ files (broken since v0.02)

0.06      2013-12-14 21:46:23Z
    - new 'file' option, for adding extra files to be checked

0.05      2013-10-09 16:07:32Z
    - documentation fix: misspelled plugin name in [NoTabsTests]

0.04      2013-09-25 15:33:24Z
    - fix broken test caused by running an autogenerated test in situ and
      confusing FindBin horribly

0.03      2013-09-25 04:33:08Z
    - re-release with fixed compile test

0.02      2013-09-15 03:24:28Z
    - now dies if Test::NoTabs is not present, rather than skipping test
    - develop require prerequisites are now injected into the distribution
    - now includes the list of files to check inside the test, allowing
      customization of files to search via filefinder options; also works
      around issue with Test::NoTabs that tests nothing when the test is two
      levels deep from the dist root (RT#88042)
    - renamed [NoTabsTests] to [Test::NoTabs].

0.01      2010-05-29 15:02:08Z
    - Split off of Dist::Zilla::Plugin::SanityTests.